@@ -2,19 +2,22 @@ package com.velu.MovieBookingApplication.service;
 import com.velu.MovieBookingApplication.Repository.BookingRepository;
 import com.velu.MovieBookingApplication.Repository.ShowRepository;
 import com.velu.MovieBookingApplication.Repository.UserRepository;
-import com.velu.MovieBookingApplication.dto.PaginationResponse;
+import com.velu.MovieBookingApplication.dtoresponse.PaginationResponse;
 import com.velu.MovieBookingApplication.util.Utils;
-import com.velu.MovieBookingApplication.dto.BookingDto;
+import com.velu.MovieBookingApplication.dto.BookingDTO;
 import com.velu.MovieBookingApplication.entity.Booking;
 import com.velu.MovieBookingApplication.entity.Show;
 import com.velu.MovieBookingApplication.entity.User;
 import com.velu.MovieBookingApplication.enums.BookingStatus;
-import com.velu.MovieBookingApplication.exception.*;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
+
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Set;
@@ -30,32 +33,38 @@ public class BookingService {
     @Autowired
     private UserRepository userRepository;
 
-    public BookingDto createBooking(BookingDto bookingDto) {
-
-           Show show = showRepository.findById(bookingDto.getShowId()).orElseThrow(() -> new ResourceNotFoundException("Show not found" + bookingDto.getShowId()));
-
-            if(!isSeatAvailable(bookingDto.getShowId(),bookingDto.getNumberOfSeats())){
-                throw  new SeatsNotAvailableException("Not enough seat are available");
-            }
-
-            if(bookingDto.getSeatNumbers().size() != bookingDto.getNumberOfSeats()){
-                  throw new InvalidSeatSelectionException("Seat Numbers and Number of Seats must be equal");
-            }
-
-            validateDuplicateSeats(show.getId(),bookingDto.getSeatNumbers());
-
-            User user =  userRepository.findById(bookingDto.getUserId()).orElseThrow(() -> new RuntimeException("No user id is found" + " " + bookingDto.getUserId()));
+    @Transactional
+    public Booking createBooking(BookingDTO bookingDto) {
 
             Booking booking = new Booking();
-            booking.setBookingDate(bookingDto.getBookingDate());
-            booking.setPrice(calculateTotalAmount(show.getPrice(),bookingDto.getNumberOfSeats()));
-            booking.setBookingStatus(BookingStatus.PENDING);
-            booking.setShow(show);
-            booking.setUser(user);
-            booking.setSeatNumbers(bookingDto.getSeatNumbers());
-            booking.setNumberOfSeats(bookingDto.getNumberOfSeats());
 
-            return Utils.convertBookingToBookingDTO(bookingRepository.save(booking));
+                Show show = showRepository.findByIdForUpdate(bookingDto.getShowId());
+
+                if(bookingDto.getNumberOfSeats() <= 0){
+                     throw new ResponseStatusException(HttpStatus.BAD_REQUEST,"At least one seat must be selected");
+                }
+
+                if(!isSeatAvailable(show,bookingDto.getNumberOfSeats())){
+                    throw  new ResponseStatusException(HttpStatus.CONFLICT ,"Not enough seat are available");
+                }
+
+                if(bookingDto.getSeatNumbers().size() != bookingDto.getNumberOfSeats()){
+                    throw new ResponseStatusException(HttpStatus.CONFLICT,"Seat Numbers and Number of Seats must be equal");
+                }
+
+                validateDuplicateSeats(show,bookingDto.getSeatNumbers());
+
+                User user =  userRepository.findById(bookingDto.getUserId()).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND , "No user id is found" + " " + bookingDto.getUserId()));
+
+                booking.setBookingDate(bookingDto.getBookingDate());
+                booking.setPrice(calculateTotalAmount(show.getPrice(),bookingDto.getNumberOfSeats()));
+                booking.setBookingStatus(BookingStatus.PENDING);
+                booking.setShow(show);
+                booking.setUser(user);
+                booking.setSeatNumbers(bookingDto.getSeatNumbers());
+                booking.setNumberOfSeats(bookingDto.getNumberOfSeats());
+
+                return bookingRepository.save(booking);
     }
 
     private Double calculateTotalAmount(Double price, Integer numberOfSeats) {
@@ -63,8 +72,7 @@ public class BookingService {
     }
 
 
-    private void validateDuplicateSeats(Long id, List<String> seatNumbers) {
-        Show show = showRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Show not found" + id));
+    private void validateDuplicateSeats(Show show, List<String> seatNumbers) {
 
     Set<String> occupiedSeats  =    show.getBookings().stream()
                 .filter(booking -> booking.getBookingStatus() != BookingStatus.CANCELLED)
@@ -73,17 +81,14 @@ public class BookingService {
 
     List<String> duplicateSeats =  seatNumbers.stream()
                               .filter(occupiedSeats::contains)
-                              .collect(Collectors.toList());
+                              .toList();
     if(!duplicateSeats.isEmpty()){
-        throw new DuplicateSeatException("Seats are already booked");
+        throw new ResponseStatusException(HttpStatus.CONFLICT, "Seats are already booked");
     }
 
     }
 
-    private boolean isSeatAvailable(Long showId, Integer numberOfSeats) {
-
-
-        Show show = showRepository.findById(showId).orElseThrow(() -> new ResourceNotFoundException("Show not found" + showId));
+    private boolean isSeatAvailable(Show show, Integer numberOfSeats) {
 
      int bookedSeats =  show.getBookings().stream()
                 .filter(booking -> booking.getBookingStatus() != BookingStatus.CANCELLED)
@@ -94,21 +99,24 @@ public class BookingService {
 
     }
 
-    public BookingDto updateBooking(Long id, BookingDto bookingDto) {
 
-        User user = userRepository.findById(bookingDto.getUserId()).orElseThrow(() -> new ResourceNotFoundException("User is not found for this id" + " " + bookingDto.getUserId()));
-        Show show = showRepository.findById(bookingDto.getShowId()).orElseThrow(() -> new ResourceNotFoundException("Show not found" + bookingDto.getShowId()));
-         Booking booking = bookingRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Booking is not found for this id" + " " + id));
+    public Booking updateBooking(Long id, BookingDTO bookingDto) {
+
+        User user = userRepository.findById(bookingDto.getUserId()).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User is not found for this id" + " " + bookingDto.getUserId()));
+        Show show = showRepository.findById(bookingDto.getShowId()).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,"Show not found" + bookingDto.getShowId()));
+         Booking booking = bookingRepository.findById(id).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,"Booking is not found for this id" + " " + id));
         booking.setBookingDate(bookingDto.getBookingDate());
         booking.setShow(show);
+        booking.setPrice(booking.getPrice());
         booking.setUser(user);
         booking.setSeatNumbers(bookingDto.getSeatNumbers());
+        booking.setCreatedAt(LocalDateTime.now());
         booking.setNumberOfSeats(bookingDto.getNumberOfSeats());
 
-        return Utils.convertBookingToBookingDTO(bookingRepository.save(booking));
+        return booking;
     }
 
-    public PaginationResponse<BookingDto> getUserBookings(Integer page,Integer size,Long id) {
+    public PaginationResponse<Booking> getUserBookings(Integer page,Integer size,Long id) {
         Sort sort = Sort.by(
              Sort.Order.asc("show.showTime"),
              Sort.Order.desc("createdAt")
@@ -117,13 +125,13 @@ public class BookingService {
 
         PageRequest pageRequest = PageRequest.of(page,size,sort);
 
-        Page<Booking> bookings = bookingRepository.findAll(pageRequest,id);
+        Page<Booking> bookings = bookingRepository.findByUserId(pageRequest,id);
 
-        return Utils.convertPageToPaginationResponse(bookings, Utils::convertBookingToBookingDTO);
+        return Utils.convertPageToPaginationResponse(bookings);
     }
 
 
-    public PaginationResponse<BookingDto> getShowBookings(Integer page, Integer size, Long id ) {
+    public PaginationResponse<Booking> getShowBookings(Integer page, Integer size, Long id ) {
 
         Sort sort = Sort.by(
                 Sort.Order.asc("show.showTime"),
@@ -135,16 +143,16 @@ public class BookingService {
 
         Page<Booking> bookings =  bookingRepository.findByShowId(id,pageRequest);
 
-        return  Utils.convertPageToPaginationResponse(bookings,Utils::convertBookingToBookingDTO);
+        return  Utils.convertPageToPaginationResponse(bookings);
     }
 
     public Booking confirmBooking(Long id) {
 
        Booking booking =  bookingRepository.findById(id)
-                  .orElseThrow(() -> new ResourceNotFoundException("Booking not found"));
+                  .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,"Booking not found"));
 
        if(booking.getBookingStatus() != BookingStatus.PENDING){
-            throw new InvalidBookingStateException("Booking is not pending state");
+            throw new ResponseStatusException(HttpStatus.CONFLICT,"Booking is not pending state");
        }
 
        booking.setBookingStatus(BookingStatus.CONFIRMED);
@@ -152,15 +160,15 @@ public class BookingService {
        return bookingRepository.save(booking);
     }
 
-    public BookingDto cancelBooking(Long id) {
+    public Booking cancelBooking(Long id) {
 
         Booking booking =  bookingRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Booking not found"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,"Booking not found"));
 
         validateCancellation(booking);
 
         booking.setBookingStatus(BookingStatus.CANCELLED);
-        return Utils.convertBookingToBookingDTO(bookingRepository.save(booking));
+        return bookingRepository.save(booking);
     }
 
     private void validateCancellation(Booking booking){
@@ -171,15 +179,15 @@ public class BookingService {
 //         7:00 clock is the cancellation time
 
         if(LocalDateTime.now().isAfter(deadLineTime)){
-            throw new InvalidBookingCancellationException("Booking cancel can be done 2 hours before show begin");
+            throw new ResponseStatusException(HttpStatus.CONFLICT,"Booking cancel can be done 2 hours before show begin");
         }
 
         if(booking.getBookingStatus() == BookingStatus.CANCELLED){
-            throw new InvalidBookingCancellationException("Booking Already been cancelled");
+            throw new ResponseStatusException(HttpStatus.CONFLICT,"Booking Already been cancelled");
         }
     }
 
-    public PaginationResponse<BookingDto> getBookingbyUseridandStatus(Integer offset,Integer pageSize,Long id,BookingStatus status) {
+    public PaginationResponse<Booking> getBookingbyUseridandStatus(Integer offset,Integer pageSize,Long id,BookingStatus status) {
 
         Sort sort = Sort.by(
                 Sort.Order.asc("show.showTime"),
@@ -192,19 +200,23 @@ public class BookingService {
         Page<Booking> bookings;
 
         if(status == null){
-           bookings =  bookingRepository.findByUserId(id,pageRequest);
+           bookings =  bookingRepository.findByUserId(pageRequest,id);
         }
 
         bookings =   bookingRepository.findByUserIdAndBookingStatus(id,pageRequest,status);
-       return Utils.convertPageToPaginationResponse(bookings,Utils::convertBookingToBookingDTO);
+       return Utils.convertPageToPaginationResponse(bookings);
     }
 
     public void deleteBooking(Long id) {
 
+        if(!bookingRepository.existsById(id)){
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND,"Booking id is not found: " + id);
+        }
+
         bookingRepository.deleteById(id);
     }
 
-    public PaginationResponse<BookingDto> getAllBookings(Integer page, Integer size,  BookingStatus status) {
+    public PaginationResponse<Booking> getAllBookings(Integer page, Integer size,  BookingStatus status) {
 
         Sort sort = Sort.by(
                 Sort.Order.asc("show.showTime"),
@@ -222,7 +234,7 @@ public class BookingService {
 
        bookings =  bookingRepository.findAll(pageRequest);
 
-       return Utils.convertPageToPaginationResponse(bookings,Utils::convertBookingToBookingDTO);
+       return Utils.convertPageToPaginationResponse(bookings);
 
     }
 
